fixed layers popup that was cutting off content and added permission to process .tif files

--- a/app/static/app/js/css/LayersControlPanel.scss
+++ b/app/static/app/js/css/LayersControlPanel.scss
@@ -4,8 +4,8 @@
 }
 
 .open.layer-container {
-  max-height: 350px;
-  overflow: hidden;
+  //max-height: 350px;
+  //overflow: hidden;
   border-radius: 20px;
 
 }
